--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/png" href="http://fountainjs.io/assets/imgs/fountain.png" />
   </head>
 
-  <body ng-app="app">
+  <body ng-app="myApp">
     <ui-view></ui-view>
   </body>
 </html>
